# collinear-points

./: CMakeLists.txt  README.md
data/input/: equidistant_1.txt
plot/: main.py  pyproject.toml
src/: collinear-points  collinear.cpp  collinear.h  main.cpp
